# LitLaunch

./: CMakeLists.txt  HEADER.txt  LICENSE-C-SEMVER  Makefile  README.md  build.gradle  output.txt  settings.gradle
.github/workflows/: build.yml  build_debug.yml
LitLaunch-C/: .gitignore
LitLaunch-C/litlaunch-library-api/: Makefile
LitLaunch-C/litlaunch-library-api/src/: litlaunch-library-api.h  main.c  main.h  software-struct.c  test.c
LitLaunch-Java/litlaunch-library-api/src/main/java/io/github/codetoil/litlaunch/api/: ILibrary.java  ILogger.java  IPlugin.java  ISoftware.java  LibraryAPI.java
LitLaunch-NET/: install.sh
builds/: litlaunch-library-api-0.2.0+build.0-windows-x86.lib
gradle/wrapper/: gradle-wrapper.properties
litlaunch-config/: build.gradle
litlaunch-config/src/main/java/io/github/codetoil/litlaunch/config/: Config.java  ConfigPlugin.java
litlaunch-event/: build.gradle
litlaunch-event/src/main/java/io/github/codetoil/litlaunch/api/event/: EventHandler.java  EventType.java
litlaunch-java/: .gitignore  build.gradle
litlaunch-java-dependency-loader/: build.gradle
litlaunch-java-dependency-loader/src/main/java/io/github/codetoil/dependency_loader/: DependencyFileLoader.java  DependencyLoaderLibrary.java  IDependencyInjector.java
litlaunch-java/src/main/java/io/github/codetoil/litlaunch/api/dependency_types/: DependencyTypesLibrary.java
litlaunch-java/src/main/java/io/github/codetoil/litlaunch/api/library_api/: Component.java  LitlaunchLibrary.java  LitlaunchLibraryApiLibrary.java  LitlaunchPlugin.java  Software.java
litlaunch-java/src/main/java/io/github/codetoil/litlaunch/test/java/io/github/codetoil/litlaunch/test/: Test.java
litlaunch-java/src/test/java/io/github/codetoil/litlaunch/test/: Main.java
litlaunch-libraries/config/: build.gradle
litlaunch-libraries/dependency-loader/src/main/java/io/github/codetoil/dependency_loader/: DependencyFileLoader.java
litlaunch-libraries/event/: build.gradle
litlaunch-libraries/event/src/main/java/io/github/codetoil/litlaunch/api/event/: EventLibrary.java  IEvent.java
litlaunch-libraries/java/: .gitignore  build.gradle  update_java.sh
litlaunch-libraries/java-dependency-loader/: build.gradle
litlaunch-libraries/java-dependency-loader/src/main/java/io/github/codetoil/dependency_loader/: ClassLoaderWrapper.java  DependencyLoaderLibrary.java  IDependencyInjector.java
litlaunch-libraries/java/src/main/java/io/github/codetoil/litlaunch/api/dependency_types/: DependencyTypesLibrary.java
litlaunch-libraries/java/src/main/java/io/github/codetoil/litlaunch/api/library_api/: Component.java  LitlaunchLibrary.java  LitlaunchLibraryApiLibrary.java  LitlaunchPlugin.java  Software.java
litlaunch-libraries/java/src/main/java/io/github/codetoil/litlaunch/test/: Test.java
litlaunch-libraries/logger/: build.gradle
litlaunch-libraries/logger/src/main/java/io/github/codetoil/litlaunch/logger/: ILogger.java
litlaunch-library-api/: .gitignore  CMakeLists.txt  Makefile  build.gradle
litlaunch-library-api/builds/: litlaunch-library-api-0.2.0+build.0-windows-x64.lib  litlaunch-library-api-tests-0.1.1+build.1  litlaunch-library-api-tests-0.1.1+build.2  litlaunch-library-api-tests-0.1.1+build.3  litlaunch-library-api-tests-0.1.1+build.4
litlaunch-library-api/include/: c_semver.c  c_semver.h
litlaunch-library-api/shared-library/src/main/c/: litlaunch-library-api.c
litlaunch-library-api/shared-library/src/main/public/: litlaunch-library-api.h
litlaunch-library-api/src/main/c/: component-struct.c  dependencies.c  dependency-types.h  library-struct.c  litlaunch-library-api.c  litlaunch-library-api.h  location.c  main.c  plugin-struct.c  run.c  simple_string_lib.c  simple_string_lib.h  software-struct.c  test.c
litlaunch-library-api/src/main/headers/: dependencies.h  libraries.h  litlaunch-internal.h  litlaunch-library-api.h  registries.h
litlaunch-library-api/src/main/java/io/github/codetoil/litlaunch/api/: Component.java  EnumDependencyRequirement.java  IComponent.java  IPlugin.java  LitLaunchLibrary.java  LitLaunchLibraryApi.java  LitLaunchPlugin.java  Software.java
litlaunch-library-api/src/main/public/: dependency-types.h  litlaunch-library-api.h
litlaunch-library-api/src/main/public/litlaunch/: dependencies.h  litlaunch-library-api.h  location.h
litlaunch-library-api/src/test/c/munit/: munit.c
litlaunch-library-api/src/test/java/io/github/codetoil/litlaunch/test/: TestSuite.java
litlaunch-library-api/test/: CMakeLists.txt  build.gradle
litlaunch-library-api/test/lib/: litlaunch-library-api-0.1.0+build.3-win-x64.lib  litlaunch-library-api-0.1.0+build.4-win-x64.lib
litlaunch-library-api/test/src/main/c/: run.c
litlaunch-library-api/test/src/main/c/munit/: LICENSE.c
litlaunch-library-api/test/src/main/headers/: litlaunch-library-api.h
litlaunch-library-api/test/src/main/headers/munit/: LICENSE.h
litlaunch-library-api/test/src/main/headers/uthash/: LICENSE.h
litlaunch-logger/: build.gradle
litlaunch-logger/src/main/java/io/github/codetoil/litlaunch/logger/: LoggerLibrary.java
litlaunch-logger/src/main/java/io/github/codetoil/litlaunch/logger/config/: LoggerConfig.java
